--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "jsonwebtoken": "^8.5.1",
     "mybatis-mapper": "^0.6.5",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "node-schedule": "^2.0.0",
     "properties": "^1.2.1",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
